examples/test/testpolicy9483.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9483
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key29: value0
      key24: value7
      key32: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value44
          key43: value9
          key49: value23
      podSelector:
        matchLabels:
          key15: value6
          key24: value46
          key16: value27
